--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ button {
 
 /* Hero Section */
 .hero {
-  background-image: url("/assets/main_bg.png");
+  background-image: url("./assets/main_bg.png");
   background-size: cover;
   background-position: center;
   height: 75rem;
